Bug 1722628 [wpt PR 29813] - AppHistory ongoing navigation tracking, a=testonly
Automatic update from web-platform-tests
AppHistory ongoing navigation tracking (#29813)

Change-Id: I1cb78990a52a10a44325734eed5736507564ebb9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3044718
Commit-Queue: Nate Chapin <japhetchromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Cr-Commit-Position: refs/heads/master{#909066}

Co-authored-by: Nate Chapin <japhetchromium.org>
--

wpt-commits: fb2cca36eadf7bd5dd3bbfca4aae03a5b6378f85
wpt-pr: 29813

UltraBlame original commit: 8dfa9c9944a70e4619e0a0872bfc371a76729355

--- a/testing/web-platform/tests/app-history/navigate-event/signal-abort-detach-in-onnavigate.html
+++ b/testing/web-platform/tests/app-history/navigate-event/signal-abort-detach-in-onnavigate.html
@@ -44,6 +44,16 @@ id
 "
 i
 "
+src
+=
+"
+/
+common
+/
+blank
+.
+html
+"
 >
 <
 /
@@ -59,6 +69,20 @@ t
 =
 >
 {
+await
+new
+Promise
+(
+resolve
+=
+>
+i
+.
+onload
+=
+resolve
+)
+;
 let
 iframe_constructor
 =
