--- a/testing/web-platform/tests/app-history/navigate-event/signal-abort-window-stop-after-respondWith.html
+++ b/testing/web-platform/tests/app-history/navigate-event/signal-abort-window-stop-after-respondWith.html
@@ -60,12 +60,80 @@ step_func
 >
 {
 let
+target_url
+=
+location
+.
+href
++
+"
+?
+1
+"
+;
+let
 abort_signal
 ;
 let
 onabort_called
 =
 false
+;
+let
+navigateErrorException
+;
+appHistory
+.
+onnavigateerror
+=
+t
+.
+step_func
+(
+e
+=
+>
+{
+assert_equals
+(
+e
+.
+constructor
+ErrorEvent
+)
+;
+navigateErrorException
+=
+e
+.
+error
+;
+assert_equals
+(
+e
+.
+filename
+target_url
+)
+;
+assert_equals
+(
+e
+.
+lineno
+0
+)
+;
+assert_equals
+(
+e
+.
+colno
+0
+)
+;
+}
+)
 ;
 appHistory
 .
@@ -133,14 +201,14 @@ resolve
 }
 )
 ;
+let
+navigate_promise
+=
 appHistory
 .
 navigate
 (
-"
-?
-1
-"
+target_url
 )
 ;
 window
@@ -161,6 +229,47 @@ assert_true
 onabort_called
 )
 ;
+promise_rejects_dom
+(
+t
+'
+AbortError
+'
+navigate_promise
+)
+.
+then
+(
+(
+)
+=
+>
+{
+return
+navigate_promise
+.
+catch
+(
+e
+=
+>
+assert_equals
+(
+e
+navigateErrorException
+)
+)
+;
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
 /
 /
 Complete
@@ -197,6 +306,9 @@ step_func_done
 }
 )
 5
+)
+;
+}
 )
 ;
 }
