--- a/testing/web-platform/tests/app-history/navigate/goTo-repeated.html
+++ b/testing/web-platform/tests/app-history/navigate/goTo-repeated.html
@@ -40,8 +40,9 @@ script
 <
 script
 >
-async_test
+promise_test
 (
+async
 t
 =
 >
@@ -70,6 +71,13 @@ a
 replace
 navigation
 .
+await
+new
+Promise
+(
+resolve
+=
+>
 window
 .
 onload
@@ -82,12 +90,11 @@ t
 .
 step_timeout
 (
-async
-(
+resolve
+0
 )
-=
->
-{
+)
+;
 let
 key
 =
@@ -118,6 +125,9 @@ goTo
 key
 )
 ;
+let
+second_promise
+=
 appHistory
 .
 goTo
@@ -125,24 +135,36 @@ goTo
 key
 )
 ;
-await
-promise_rejects_dom
+assert_equals
 (
-t
-'
-AbortError
-'
 first_promise
+second_promise
 )
 ;
-t
+let
+second_promise_resolved
+=
+false
+;
+second_promise
 .
-done
+then
+(
 (
 )
+=
+>
+second_promise_resolved
+=
+true
+)
 ;
-}
-0
+await
+first_promise
+;
+assert_true
+(
+second_promise_resolved
 )
 ;
 }
