Bug 1717219 [wpt PR 29433] - Test attr case-sensitivity in css/css-content, a=testonly
Automatic update from web-platform-tests
Test attr case-sensitivity in css/css-content

Fixes #2831

--

wpt-commits: 4324d7ad891983bf512cc17baf67c835718bef94
wpt-pr: 29433

UltraBlame original commit: 1320d08f700ed624e556b1b5507e3251d6863e8e

--- a/testing/web-platform/tests/css/css-content/attr-case-sensitivity-001.html
+++ b/testing/web-platform/tests/css/css-content/attr-case-sensitivity-001.html
@@ -14,48 +14,15 @@ utf
 <
 title
 >
-Names
-specified
-in
 attr
-for
-a
-content
-property
-are
-case
--
-insensitive
-in
+(
+)
+with
 HTML
-documents
+attributes
 <
 /
 title
->
-<
-link
-rel
-=
-match
-href
-=
-/
-css
-/
-css
--
-content
-/
-attr
--
-case
--
-insensitive
--
-ref
-.
-html
 >
 <
 link
@@ -71,11 +38,47 @@ https
 :
 /
 /
-drafts
+www
 .
-csswg
+w3
 .
 org
+/
+TR
+/
+css
+-
+values
+-
+4
+/
+#
+attr
+-
+notation
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+TR
 /
 css
 -
@@ -88,7 +91,68 @@ content
 -
 property
 "
+>
+<
+link
+rel
+=
+match
+href
+=
+"
 /
+css
+/
+css
+-
+content
+/
+attr
+-
+case
+-
+sensitivity
+-
+ref
+-
+001
+.
+html
+"
+>
+<
+meta
+name
+=
+"
+assert
+"
+content
+=
+"
+This
+test
+checks
+that
+names
+specified
+in
+attr
+(
+)
+for
+a
+content
+property
+are
+case
+-
+insensitive
+in
+HTML
+documents
+.
+"
 >
 <
 style
