Bug 1723075 [wpt PR 29847] - [css-flex] Support content, min/max/fit-content in flex-basis, a=testonly
Automatic update from web-platform-tests
[css-flex] Support content, min/max/fit-content in flex-basis

Flex needed very little extra logic. This CL is mostly straightforward
parser stuff and updating switch statements.

The I2S is at
https://groups.google.com/a/chromium.org/g/blink-dev/c/lzcWR4Q97ik/m/GvFidwZtEwAJ

Fixed: 470421
Change-Id: I07160a00343b8dcdb03b207c0a79c15f6ae6c49a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3041969
Reviewed-by: Christian Biesinger <cbiesingerchromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrickchromium.org>
Reviewed-by: Anders Hartvoll Ruud <andruudchromium.org>
Commit-Queue: David Grogan <dgroganchromium.org>
Cr-Commit-Position: refs/heads/master{#909935}

--

wpt-commits: 4424f6b11490bd945d1eebe884b67c80cc93c535
wpt-pr: 29847

UltraBlame original commit: 4d26733bec646bbce503fcde3a05d2bfd9085ae1

--- a/testing/web-platform/tests/css/css-flexbox/parsing/flex-basis-computed.html
+++ b/testing/web-platform/tests/css/css-flexbox/parsing/flex-basis-computed.html
@@ -254,6 +254,60 @@ flex
 basis
 "
 "
+content
+"
+)
+;
+test_computed_value
+(
+"
+flex
+-
+basis
+"
+"
+fit
+-
+content
+"
+)
+;
+test_computed_value
+(
+"
+flex
+-
+basis
+"
+"
+min
+-
+content
+"
+)
+;
+test_computed_value
+(
+"
+flex
+-
+basis
+"
+"
+max
+-
+content
+"
+)
+;
+test_computed_value
+(
+"
+flex
+-
+basis
+"
+"
 calc
 (
 10px
