--- a/testing/web-platform/tests/css/css-flexbox/parsing/flex-basis-valid.html
+++ b/testing/web-platform/tests/css/css-flexbox/parsing/flex-basis-valid.html
@@ -243,19 +243,48 @@ auto
 "
 )
 ;
-/
-/
-The
-following
-is
-not
-yet
-supported
-by
-browsers
-:
-/
-/
+test_valid_value
+(
+"
+flex
+-
+basis
+"
+"
+fit
+-
+content
+"
+)
+;
+test_valid_value
+(
+"
+flex
+-
+basis
+"
+"
+min
+-
+content
+"
+)
+;
+test_valid_value
+(
+"
+flex
+-
+basis
+"
+"
+max
+-
+content
+"
+)
+;
 test_valid_value
 (
 "
