--- a/testing/web-platform/tests/css/css-typed-om/the-stylepropertymap/properties/flex-basis.html
+++ b/testing/web-platform/tests/css/css-typed-om/the-stylepropertymap/properties/flex-basis.html
@@ -263,6 +263,33 @@ content
 syntax
 :
 '
+fit
+-
+content
+'
+}
+{
+syntax
+:
+'
+min
+-
+content
+'
+}
+{
+syntax
+:
+'
+max
+-
+content
+'
+}
+{
+syntax
+:
+'
 <
 length
 >
