Bug 1724802 [wpt PR 29954] - Restore hidden-elements.html test to original form, a=testonly
Automatic update from web-platform-tests
Restore hidden-elements.html test to original form

As pointed out in this thread [1], <source> and <track> don't have
explicitly specified display properties, so they should default to
display: inline. This CL restores the test that looks for 'inline'.

[1] https://github.com/web-platform-tests/wpt/pull/29883#issuecomment-894124180

Bug: 1231263
Change-Id: I03937953228b0e83625d3a51a3a9ff71f6230827
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3082495
Commit-Queue: Mason Freed <masonfchromium.org>
Commit-Queue: Joey Arhar <jarharchromium.org>
Auto-Submit: Mason Freed <masonfchromium.org>
Reviewed-by: Joey Arhar <jarharchromium.org>
Cr-Commit-Position: refs/heads/master{#910046}

--

wpt-commits: 939447a26b7bcf6085bbad240e1b00e5d2bb211d
wpt-pr: 29954

UltraBlame original commit: 8f4dfcea9d1b89fc717f13c05805a8b4925b3401

--- a/testing/web-platform/tests/html/rendering/non-replaced-elements/hidden-elements.html
+++ b/testing/web-platform/tests/html/rendering/non-replaced-elements/hidden-elements.html
@@ -137,27 +137,6 @@ title
 "
 ]
 ;
-function
-isDisplayNone
-(
-element
-)
-{
-return
-getComputedStyle
-(
-element
-)
-.
-display
-=
-=
-=
-"
-none
-"
-;
-}
 for
 (
 let
@@ -191,12 +170,17 @@ appendChild
 element
 )
 ;
-assert_false
+assert_equals
 (
-isDisplayNone
+getComputedStyle
 (
 element
 )
+.
+display
+"
+inline
+"
 )
 ;
 }
@@ -206,9 +190,7 @@ name
 should
 not
 be
-display
-:
-none
+hidden
 )
 ;
 }
@@ -245,12 +227,17 @@ appendChild
 element
 )
 ;
-assert_true
+assert_equals
 (
-isDisplayNone
+getComputedStyle
 (
 element
 )
+.
+display
+"
+none
+"
 )
 ;
 }
@@ -259,9 +246,7 @@ name
 }
 should
 be
-display
-:
-none
+hidden
 )
 ;
 }
@@ -271,9 +256,9 @@ function
 (
 )
 {
-assert_true
+assert_equals
 (
-isDisplayNone
+getComputedStyle
 (
 document
 .
@@ -286,6 +271,11 @@ hidden
 "
 )
 )
+.
+display
+"
+none
+"
 )
 ;
 }
@@ -295,9 +285,7 @@ hidden
 element
 should
 be
-display
-:
-none
+hidden
 )
 ;
 <
