--- a/testing/web-platform/tests/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html
+++ b/testing/web-platform/tests/html/semantics/forms/the-selectmenu-element/selectmenu-parts-structure.tentative.html
@@ -700,6 +700,183 @@ option
 selectmenu
 >
 <
+!
+-
+-
+No
+associated
+JS
+test
+-
+-
+just
+don
+'
+t
+crash
+when
+parsing
+!
+-
+-
+>
+<
+selectmenu
+id
+=
+"
+selectMenu6
+"
+>
+<
+div
+slot
+=
+"
+button
+"
+>
+<
+/
+div
+>
+<
+popup
+slot
+=
+"
+listbox
+"
+part
+=
+"
+listbox
+"
+>
+<
+/
+popup
+>
+<
+/
+selectmenu
+>
+<
+!
+-
+-
+No
+associated
+JS
+test
+-
+-
+just
+don
+'
+t
+crash
+when
+parsing
+!
+-
+-
+>
+<
+selectmenu
+id
+=
+"
+selectMenu7
+"
+>
+<
+div
+slot
+=
+"
+listbox
+"
+>
+<
+/
+div
+>
+<
+div
+slot
+=
+"
+button
+"
+part
+=
+"
+button
+"
+>
+<
+/
+div
+>
+<
+/
+selectmenu
+>
+<
+!
+-
+-
+No
+associated
+JS
+test
+-
+-
+just
+don
+'
+t
+crash
+when
+parsing
+!
+-
+-
+>
+<
+selectmenu
+id
+=
+"
+selectMenu8
+"
+>
+<
+div
+slot
+=
+"
+listbox
+"
+>
+<
+/
+div
+>
+<
+option
+>
+one
+<
+/
+option
+>
+<
+/
+selectmenu
+>
+<
 script
 >
 function
