--- a/testing/web-platform/tests/css/css-contain/content-visibility/content-visibility-026.html
+++ b/testing/web-platform/tests/css/css-contain/content-visibility/content-visibility-026.html
@@ -20,8 +20,8 @@ title
 Content
 Visibility
 :
-containment
-added
+Computed
+Values
 <
 /
 title
@@ -94,112 +94,44 @@ content
 content
 -
 visibility
-visible
+:
+hidden
 does
 not
-add
-containment
-"
->
-<
-meta
-name
-=
-"
-assert
-"
-content
-=
-"
-content
--
-visibility
-hidden
-adds
-containment
-"
->
-<
-meta
-name
-=
-"
-assert
-"
-content
-=
-"
-content
--
-visibility
-auto
-adds
-containment
-"
->
-<
-meta
-name
-=
-"
-assert
-"
-content
-=
-"
-content
--
-visibility
-auto
-visibility
-switches
-after
-rAF
-callbacks
+affect
+computed
+value
 of
-the
-frame
-that
-produces
-the
-painted
-output
+'
+contain
+'
 "
 >
 <
-style
->
-.
-auto
-{
+meta
+name
+=
+"
+assert
+"
+content
+=
+"
 content
 -
 visibility
 :
 auto
-;
-}
-.
-hidden
-{
-content
--
-visibility
-:
-hidden
-;
-}
-.
-spacer
-{
-height
-:
-10000px
-;
-}
-<
-/
-style
+does
+not
+affect
+computed
+value
+of
+'
+contain
+'
+"
 >
 <
 div
@@ -207,40 +139,6 @@ id
 =
 "
 container
-"
->
-<
-/
-div
->
-<
-div
-id
-=
-"
-onscreen_container
-"
->
-<
-/
-div
->
-<
-div
-class
-=
-spacer
->
-<
-/
-div
->
-<
-div
-id
-=
-"
-offscreen_container
 "
 >
 <
@@ -284,25 +182,50 @@ script
 <
 script
 >
-function
-setUp
+test
+(
+(
+)
+=
+>
+{
+assert_equals
+(
+getComputedStyle
 (
 container
 )
-{
+.
+contain
+"
+none
+"
+)
+;
 container
 .
 style
 =
 "
+content
+-
+visibility
+:
+hidden
 "
 ;
+assert_equals
+(
+getComputedStyle
+(
 container
+)
 .
-classList
-=
+contentVisibility
 "
+hidden
 "
+)
 ;
 assert_equals
 (
@@ -318,687 +241,21 @@ none
 )
 ;
 }
-test
-(
-(
-)
-=
->
-{
-setUp
-(
-container
-)
-;
-container
-.
-classList
-.
-add
-(
-"
-hidden
-"
-)
-;
-assert_equals
-(
-getComputedStyle
-(
-container
-)
-.
-contain
-"
-strict
-"
-)
-;
-}
 "
 content
 -
 visibility
 :
 hidden
-adds
-contain
-:
-size
-layout
-style
-;
-"
-)
-;
-async_test
-(
-(
-t
-)
-=
->
-{
-setUp
-(
-onscreen_container
-)
-;
-setUp
-(
-offscreen_container
-)
-;
-function
-runTest
-(
-)
-{
-onscreen_container
-.
-classList
-.
-add
-(
-"
-auto
-"
-)
-;
-offscreen_container
-.
-classList
-.
-add
-(
-"
-auto
-"
-)
-;
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-onscreen_container
-)
-.
-contain
-"
-strict
-"
-"
-initial
-onscreen
-"
-)
-)
-;
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-offscreen_container
-)
-.
-contain
-"
-strict
-"
-"
-initial
-offscreen
-"
-)
-)
-;
-/
-/
-Considering
-this
-as
-frame
-1
-at
-the
-end
-of
-the
-frame
-intersection
-observation
-will
-happen
-/
-/
-and
-determine
-that
-on
--
-screen
-is
-visible
-and
-off
--
-screen
-is
+does
 not
-.
-The
-on
--
-screen
-switch
-will
-/
-/
-happen
-synchronously
-since
-this
-is
-the
-first
-time
-we
-check
-so
-for
-the
-remainder
+affect
+computed
+value
 of
-the
-/
-/
-frames
-on
--
-screen
-should
-not
-have
-a
-size
-containment
-.
-/
-/
-For
-off
--
-screen
-container
-:
-/
-/
-At
-frame
-2
-we
-verify
-that
-it
-has
-size
-containment
-.
-/
-/
-At
-frame
-3
-we
-scroll
-it
-into
-view
-and
-verify
-it
-has
-size
-containment
-.
-At
-the
-end
-of
-the
-frame
-/
-/
-we
-will
-determine
-that
-it
-is
-visible
-and
-schedule
-a
-visibility
-switch
-to
-happen
-at
-the
-next
-/
-/
-frame
-(
-at
-post
--
-rAF
-timing
-)
-.
-/
-/
-At
-frame
-4
-we
-still
-have
-size
-containment
-until
-after
-rAF
-callbacks
-.
-/
-/
-At
-frame
-5
-the
-container
-is
-no
-longer
-size
--
-contained
-since
-it
-is
-visible
-.
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-/
-/
-Frame
-2
-checks
-:
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-onscreen_container
-)
-.
-contain
-"
-content
-"
-"
-frame
-2
-onscreen
-"
-)
-)
-;
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-offscreen_container
-)
-.
-contain
-"
-strict
-"
-"
-frame
-2
-offscreen
-"
-)
-)
-;
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-window
-.
-scrollBy
-(
-0
-10000
-)
-;
-/
-/
-Frame
-3
-checks
-:
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-offscreen_container
-)
-.
-contain
-"
-strict
-"
-"
-frame
-3
-"
-)
-)
-;
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-/
-/
-Frame
-4
-checks
-:
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-offscreen_container
-)
-.
-contain
-"
-strict
-"
-"
-frame
-4
-"
-)
-)
-;
-requestAnimationFrame
-(
-(
-)
-=
->
-{
-/
-/
-Frame
-5
-checks
-:
-t
-.
-step
-(
-(
-)
-=
->
-assert_equals
-(
-getComputedStyle
-(
-offscreen_container
-)
-.
-contain
-"
-content
-"
-"
-frame
-5
-"
-)
-)
-;
-t
-.
-done
-(
-)
-;
-}
-)
-;
-}
-)
-;
-}
-)
-;
-}
-)
-;
-}
-/
-/
-rAF
-to
-ensure
-we
-know
-where
-we
-are
-in
-the
-lifecycle
-.
-requestAnimationFrame
-(
-runTest
-)
-;
-}
-"
-content
--
-visibility
-:
-auto
-adds
-contain
-:
-strict
-;
-"
-)
-;
-test
-(
-(
-)
-=
->
-{
-setUp
-(
-container
-)
-;
-container
-.
-classList
-.
-add
-(
-"
-auto
-"
-)
-;
-container
-.
-style
-=
-"
-contain
-:
-style
-;
-"
-;
-assert_equals
-(
-getComputedStyle
-(
-container
-)
-.
-contain
-"
-strict
-"
-)
-;
-container
-.
-style
-=
-"
-contain
-:
-style
-layout
-;
-"
-;
-assert_equals
-(
-getComputedStyle
-(
-container
-)
-.
-contain
-"
-strict
-"
-)
-;
-container
-.
-style
-=
-"
-"
-;
-assert_equals
-(
-getComputedStyle
-(
-container
-)
-.
-contain
-"
-strict
-"
-)
-;
-}
-"
-content
--
-visibility
-:
-auto
-adds
-contain
-:
-strict
-can
 '
-t
-be
-overridden
+contain
+'
 "
 )
 ;
@@ -1009,33 +266,49 @@ test
 =
 >
 {
-setUp
+assert_equals
+(
+getComputedStyle
 (
 container
+)
+.
+contain
+"
+none
+"
 )
 ;
 container
 .
-classList
-.
-add
+style
+=
+"
+content
+-
+visibility
+:
+auto
+;
+contain
+:
+layout
+;
+"
+;
+assert_equals
 (
+getComputedStyle
+(
+container
+)
+.
+contentVisibility
 "
 auto
 "
 )
 ;
-container
-.
-style
-=
-"
-contain
-:
-paint
-;
-"
-;
 assert_equals
 (
 getComputedStyle
@@ -1045,55 +318,7 @@ container
 .
 contain
 "
-strict
-"
-)
-;
-container
-.
-style
-=
-"
-contain
-:
-strict
-;
-"
-;
-assert_equals
-(
-getComputedStyle
-(
-container
-)
-.
-contain
-"
-strict
-"
-)
-;
-container
-.
-style
-=
-"
-contain
-:
-content
-;
-"
-;
-assert_equals
-(
-getComputedStyle
-(
-container
-)
-.
-contain
-"
-strict
+layout
 "
 )
 ;
@@ -1102,14 +327,17 @@ strict
 content
 -
 visibility
-keeps
-all
-containment
-even
-when
-shorthands
-are
-specified
+:
+auto
+does
+not
+affect
+computed
+value
+of
+'
+contain
+'
 "
 )
 ;
