Bug 1724541 [wpt PR 29937] - App history: implement reload() instead of no-arg navigate(), a=testonly
Automatic update from web-platform-tests
App history: implement reload() instead of no-arg navigate()

This also fixes the exception order in navigate().

Fixed: 1211490
Fixed: 1220156
Change-Id: Ibe8b1296991b0dc621ca5f50a6fa4fc9041384a4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3076387
Commit-Queue: Domenic Denicola <domenicchromium.org>
Reviewed-by: Nate Chapin <japhetchromium.org>
Cr-Commit-Position: refs/heads/master{#910301}

--

wpt-commits: a8f15155f3a2465abeb40c7b3c92018aeab2c8b1
wpt-pr: 29937

UltraBlame original commit: 2bb33fb739ab4d31bf0ede022433315aa99869d5

--- a/testing/web-platform/tests/app-history/navigate/navigate-in-initial-about-blank-document-cross-document.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-in-initial-about-blank-document-cross-document.html
@@ -156,7 +156,7 @@ called
 )
 ;
 let
-promise_resolved
+promise_settled
 =
 false
 ;
@@ -189,13 +189,13 @@ href
 href
 )
 .
-then
+finally
 (
 (
 )
 =
 >
-promise_resolved
+promise_settled
 =
 true
 )
@@ -212,6 +212,22 @@ i
 onload
 =
 resolve
+)
+;
+await
+new
+Promise
+(
+resolve
+=
+>
+t
+.
+step_timeout
+(
+resolve
+0
+)
 )
 ;
 assert_equals
@@ -231,7 +247,7 @@ search
 ;
 assert_false
 (
-promise_resolved
+promise_settled
 )
 ;
 }
