--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-beforeunload-unserializablestate.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-beforeunload-unserializablestate.html
@@ -146,6 +146,73 @@ called
 '
 )
 ;
+let
+onbeforeunload_promise
+;
+/
+/
+The
+iframe
+does
+not
+have
+sticky
+activation
+so
+per
+/
+/
+https
+:
+/
+/
+html
+.
+spec
+.
+whatwg
+.
+org
+/
+#
+prompt
+-
+to
+-
+unload
+-
+a
+-
+document
+no
+prompt
+is
+/
+/
+shown
+and
+the
+navigation
+will
+proceed
+.
+i
+.
+contentWindow
+.
+onbeforeunload
+=
+t
+.
+step_func
+(
+(
+)
+=
+>
+{
+onbeforeunload_promise
+=
 i
 .
 contentWindow
@@ -155,52 +222,25 @@ appHistory
 navigate
 (
 "
+/
+common
+/
+blank
+.
+html
 ?
 1
 "
-)
-;
-await
-new
-Promise
-(
-resolve
-=
->
 {
-i
+state
+:
+document
 .
-contentWindow
-.
-onunload
-=
-t
-.
-step_func
-(
-(
-)
-=
->
-{
-i
-.
-contentWindow
-.
-appHistory
-.
-navigate
-(
-"
-#
-"
+body
+}
 )
 .
 catch
-(
-t
-.
-step_func
 (
 e
 =
@@ -228,19 +268,28 @@ InvalidStateError
 "
 )
 ;
-resolve
+}
+)
+;
+}
+)
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+navigate
 (
+"
+?
+1
+"
 )
 ;
-}
-)
-)
-;
-}
-)
-;
-}
-)
+await
+onbeforeunload_promise
 ;
 assert_equals
 (
@@ -249,10 +298,22 @@ navigate_event_count
 )
 ;
 }
-"
-Navigate
+navigate
+(
+)
+with
+an
+unserializable
+state
 inside
-onunload
+onbeforeunload
+throws
+"
+InvalidStateError
+"
+not
+"
+DataCloneError
 "
 )
 ;
