--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-detached-unserializablestate.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-detached-unserializablestate.html
@@ -38,6 +38,18 @@ js
 script
 >
 <
+iframe
+id
+=
+"
+i
+"
+>
+<
+/
+iframe
+>
+<
 script
 >
 promise_test
@@ -47,6 +59,30 @@ t
 =
 >
 {
+let
+iframe_constructor
+=
+i
+.
+contentWindow
+.
+DOMException
+;
+let
+i_win
+=
+i
+.
+contentWindow
+;
+i
+.
+remove
+(
+)
+;
+i_win
+.
 appHistory
 .
 onnavigate
@@ -65,8 +101,11 @@ promise_rejects_dom
 (
 t
 "
-SyntaxError
+InvalidStateError
 "
+iframe_constructor
+i_win
+.
 appHistory
 .
 navigate
@@ -79,22 +118,36 @@ https
 example
 .
 com
-\
-u0000mozilla
-.
-org
+/
 "
+{
+state
+:
+document
+.
+body
+}
 )
 )
 ;
 }
-"
 navigate
 (
 )
 with
-invalid
-url
+unserializable
+state
+in
+a
+detached
+iframe
+throws
+"
+InvalidStateError
+"
+not
+"
+DataCloneError
 "
 )
 ;
