--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-beforeunload.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-beforeunload.html
@@ -146,33 +146,61 @@ called
 '
 )
 ;
-i
-.
-contentWindow
-.
-appHistory
-.
-navigate
-(
-"
-?
-1
-"
-)
+let
+onbeforeunload_promise
 ;
-await
-new
-Promise
-(
-resolve
-=
->
-{
+/
+/
+The
+iframe
+does
+not
+have
+sticky
+activation
+so
+per
+/
+/
+https
+:
+/
+/
+html
+.
+spec
+.
+whatwg
+.
+org
+/
+#
+prompt
+-
+to
+-
+unload
+-
+a
+-
+document
+no
+prompt
+is
+/
+/
+shown
+and
+the
+navigation
+will
+proceed
+.
 i
 .
 contentWindow
 .
-onunload
+onbeforeunload
 =
 t
 .
@@ -183,6 +211,8 @@ step_func
 =
 >
 {
+onbeforeunload_promise
+=
 i
 .
 contentWindow
@@ -192,15 +222,21 @@ appHistory
 navigate
 (
 "
-#
+https
+:
+/
+/
+example
+.
+com
+\
+u0000mozilla
+.
+org
 "
 )
 .
 catch
-(
-t
-.
-step_func
 (
 e
 =
@@ -224,23 +260,32 @@ e
 .
 name
 "
-InvalidStateError
+SyntaxError
 "
 )
 ;
-resolve
+}
+)
+;
+}
+)
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+navigate
 (
+"
+?
+1
+"
 )
 ;
-}
-)
-)
-;
-}
-)
-;
-}
-)
+await
+onbeforeunload_promise
 ;
 assert_equals
 (
@@ -249,10 +294,22 @@ navigate_event_count
 )
 ;
 }
-"
-Navigate
+navigate
+(
+)
+with
+an
+invalid
+URL
 inside
-onunload
+onbeforeunload
+throws
+"
+SyntaxError
+"
+not
+"
+InvalidStateError
 "
 )
 ;
