--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-detached.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-detached.html
@@ -38,6 +38,18 @@ js
 script
 >
 <
+iframe
+id
+=
+"
+i
+"
+>
+<
+/
+iframe
+>
+<
 script
 >
 promise_test
@@ -47,6 +59,30 @@ t
 =
 >
 {
+let
+iframe_constructor
+=
+i
+.
+contentWindow
+.
+DOMException
+;
+let
+i_win
+=
+i
+.
+contentWindow
+;
+i
+.
+remove
+(
+)
+;
+i_win
+.
 appHistory
 .
 onnavigate
@@ -67,6 +103,9 @@ t
 "
 SyntaxError
 "
+iframe_constructor
+i_win
+.
 appHistory
 .
 navigate
@@ -88,13 +127,24 @@ org
 )
 ;
 }
-"
 navigate
 (
 )
 with
+an
 invalid
-url
+URL
+in
+a
+detached
+iframe
+throws
+"
+SyntaxError
+"
+not
+"
+InvalidStateError
 "
 )
 ;
