--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-unload.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-unload.html
@@ -192,7 +192,17 @@ appHistory
 navigate
 (
 "
-#
+https
+:
+/
+/
+example
+.
+com
+\
+u0000mozilla
+.
+org
 "
 )
 .
@@ -224,7 +234,7 @@ e
 .
 name
 "
-InvalidStateError
+SyntaxError
 "
 )
 ;
@@ -249,10 +259,22 @@ navigate_event_count
 )
 ;
 }
-"
-Navigate
+navigate
+(
+)
+with
+an
+invalid
+URL
 inside
 onunload
+throws
+"
+SyntaxError
+"
+not
+"
+InvalidStateError
 "
 )
 ;
