--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-unserializablestate.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-invalidurl-unserializablestate.html
@@ -38,6 +38,18 @@ js
 script
 >
 <
+iframe
+id
+=
+"
+i
+"
+>
+<
+/
+iframe
+>
+<
 script
 >
 promise_test
@@ -47,6 +59,24 @@ t
 =
 >
 {
+let
+iframe_constructor
+=
+i
+.
+contentWindow
+.
+DOMException
+;
+let
+i_win
+=
+i
+.
+contentWindow
+;
+i_win
+.
 appHistory
 .
 onnavigate
@@ -67,6 +97,9 @@ t
 "
 SyntaxError
 "
+iframe_constructor
+i_win
+.
 appHistory
 .
 navigate
@@ -84,17 +117,34 @@ u0000mozilla
 .
 org
 "
+{
+state
+:
+document
+.
+body
+}
 )
 )
 ;
 }
-"
 navigate
 (
 )
 with
+an
 invalid
-url
+URL
+and
+unserializable
+state
+throws
+"
+SyntaxError
+"
+not
+"
+DataCloneError
 "
 )
 ;
