--- a/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-unload-unserializablestate.html
+++ b/testing/web-platform/tests/app-history/navigate/navigate-rejection-order-unload-unserializablestate.html
@@ -192,8 +192,22 @@ appHistory
 navigate
 (
 "
-#
+/
+common
+/
+blank
+.
+html
+?
+1
 "
+{
+state
+:
+document
+.
+body
+}
 )
 .
 catch
@@ -249,10 +263,22 @@ navigate_event_count
 )
 ;
 }
-"
-Navigate
+navigate
+(
+)
+with
+an
+unserializable
+state
 inside
 onunload
+throws
+"
+InvalidStateError
+"
+not
+"
+DataCloneError
 "
 )
 ;
