--- a/testing/web-platform/tests/app-history/navigate/reload-in-initial-about-blank-document.html
+++ b/testing/web-platform/tests/app-history/navigate/reload-in-initial-about-blank-document.html
@@ -38,26 +38,28 @@ js
 script
 >
 <
-iframe
-id
-=
-"
-i
-"
+script
 src
 =
 "
 /
-common
+resources
 /
-blank
+get
+-
+host
+-
+info
 .
-html
+js
 "
 >
 <
 /
-iframe
+script
+>
+<
+body
 >
 <
 script
@@ -69,24 +71,26 @@ t
 =
 >
 {
-await
-new
-Promise
-(
-resolve
+let
+i
 =
->
-window
+document
 .
-onload
-=
-resolve
+createElement
+(
+"
+iframe
+"
 )
 ;
-let
-navigate_event_count
-=
-0
+document
+.
+body
+.
+appendChild
+(
+i
+)
 ;
 i
 .
@@ -96,68 +100,85 @@ appHistory
 .
 onnavigate
 =
+t
+.
+unreached_func
+(
+'
+onnavigate
+should
+not
+be
+called
+'
+)
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+onnavigatesuccess
+=
+t
+.
+unreached_func
+(
+'
+onnavigatesuccess
+should
+not
+be
+called
+'
+)
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+onnavigateerror
+=
+t
+.
+unreached_func
+(
+'
+onnavigateerror
+should
+not
+be
+called
+'
+)
+;
+let
+promise_settled
+=
+false
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+reload
+(
+)
+.
+finally
+(
 (
 )
 =
 >
-navigate_event_count
-+
-+
-;
-i
-.
-contentWindow
-.
-appHistory
-.
-onnavigatesuccess
+promise_settled
 =
-t
-.
-unreached_func
-(
-'
-onnavigatesuccess
-should
-not
-be
-called
-'
-)
-;
-i
-.
-contentWindow
-.
-appHistory
-.
-onnavigateerror
-=
-t
-.
-unreached_func
-(
-'
-onnavigateerror
-should
-not
-be
-called
-'
-)
-;
-i
-.
-contentWindow
-.
-appHistory
-.
-navigate
-(
-"
-?
-1
-"
+true
 )
 ;
 await
@@ -167,96 +188,69 @@ Promise
 resolve
 =
 >
-{
 i
 .
-contentWindow
-.
-onunload
+onload
 =
-t
-.
-step_func
-(
-(
-)
-=
->
-{
-i
-.
-contentWindow
-.
-appHistory
-.
-navigate
-(
-"
-#
-"
-)
-.
-catch
-(
-t
-.
-step_func
-(
-e
-=
->
-{
-assert_equals
-(
-e
-.
-constructor
-i
-.
-contentWindow
-.
-DOMException
-)
-;
-assert_equals
-(
-e
-.
-name
-"
-InvalidStateError
-"
-)
-;
 resolve
+)
+;
+await
+new
+Promise
 (
+resolve
+=
+>
+t
+.
+step_timeout
+(
+resolve
+0
 )
-;
-}
-)
-)
-;
-}
-)
-;
-}
 )
 ;
 assert_equals
 (
-navigate_event_count
-1
+i
+.
+contentWindow
+.
+location
+.
+href
+"
+about
+:
+blank
+"
+)
+;
+assert_false
+(
+promise_settled
 )
 ;
 }
 "
-Navigate
-inside
-onunload
+reload
+(
+)
+in
+initial
+about
+:
+blank
+document
 "
 )
 ;
 <
 /
 script
+>
+<
+/
+body
 >
