--- a/testing/web-platform/tests/app-history/navigate/reload-rejection-order-beforeunload-unserializablestate.html
+++ b/testing/web-platform/tests/app-history/navigate/reload-rejection-order-beforeunload-unserializablestate.html
@@ -146,33 +146,61 @@ called
 '
 )
 ;
-i
-.
-contentWindow
-.
-appHistory
-.
-navigate
-(
-"
-?
-1
-"
-)
+let
+onbeforeunload_promise
 ;
-await
-new
-Promise
-(
-resolve
-=
->
-{
+/
+/
+The
+iframe
+does
+not
+have
+sticky
+activation
+so
+per
+/
+/
+https
+:
+/
+/
+html
+.
+spec
+.
+whatwg
+.
+org
+/
+#
+prompt
+-
+to
+-
+unload
+-
+a
+-
+document
+no
+prompt
+is
+/
+/
+shown
+and
+the
+navigation
+will
+proceed
+.
 i
 .
 contentWindow
 .
-onunload
+onbeforeunload
 =
 t
 .
@@ -183,24 +211,26 @@ step_func
 =
 >
 {
+onbeforeunload_promise
+=
 i
 .
 contentWindow
 .
 appHistory
 .
-navigate
+reload
 (
-"
-#
-"
+{
+state
+:
+document
+.
+body
+}
 )
 .
 catch
-(
-t
-.
-step_func
 (
 e
 =
@@ -228,19 +258,28 @@ InvalidStateError
 "
 )
 ;
-resolve
+}
+)
+;
+}
+)
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+navigate
 (
+"
+?
+1
+"
 )
 ;
-}
-)
-)
-;
-}
-)
-;
-}
-)
+await
+onbeforeunload_promise
 ;
 assert_equals
 (
@@ -249,10 +288,22 @@ navigate_event_count
 )
 ;
 }
-"
-Navigate
+reload
+(
+)
+with
+an
+unserializable
+state
 inside
-onunload
+onbeforeunload
+throws
+"
+InvalidStateError
+"
+not
+"
+DataCloneError
 "
 )
 ;
