--- a/testing/web-platform/tests/app-history/navigate/reload-rejection-order-unload-unserializablestate.html
+++ b/testing/web-platform/tests/app-history/navigate/reload-rejection-order-unload-unserializablestate.html
@@ -189,11 +189,15 @@ contentWindow
 .
 appHistory
 .
-navigate
+reload
 (
-"
-#
-"
+{
+state
+:
+document
+.
+body
+}
 )
 .
 catch
@@ -249,10 +253,22 @@ navigate_event_count
 )
 ;
 }
-"
-Navigate
+reload
+(
+)
+with
+an
+unserializable
+state
 inside
 onunload
+throws
+"
+InvalidStateError
+"
+not
+"
+DataCloneError
 "
 )
 ;
