--- a/testing/web-platform/tests/app-history/navigate/reload-state-undefined.html
+++ b/testing/web-platform/tests/app-history/navigate/reload-state-undefined.html
@@ -81,16 +81,101 @@ step_func
 =
 >
 {
-let
+const
+navState
+=
+{
+key
+:
+"
+value
+"
+}
+;
+const
 navInfo
 =
 {
-nav
+infoKey
 :
 "
-info
+infoValue
 "
 }
+;
+i
+.
+contentWindow
+.
+appHistory
+.
+navigate
+(
+"
+#
+1
+"
+{
+state
+:
+navState
+}
+)
+.
+then
+(
+t
+.
+step_func
+(
+(
+)
+=
+>
+{
+/
+/
+Make
+sure
+that
+state
+setting
+worked
+assert_equals
+(
+i
+.
+contentWindow
+.
+appHistory
+.
+current
+.
+getState
+(
+)
+.
+key
+"
+value
+"
+)
+;
+assert_not_equals
+(
+i
+.
+contentWindow
+.
+appHistory
+.
+current
+.
+getState
+(
+)
+navState
+)
 ;
 let
 start_url
@@ -134,6 +219,11 @@ onnavigate_called
 =
 false
 ;
+let
+promise_settled
+=
+false
+;
 i
 .
 contentWindow
@@ -150,6 +240,17 @@ e
 =
 >
 {
+e
+.
+respondWith
+(
+Promise
+.
+resolve
+(
+)
+)
+;
 onnavigate_called
 =
 true
@@ -162,6 +263,51 @@ info
 navInfo
 )
 ;
+assert_equals
+(
+e
+.
+navigationType
+"
+reload
+"
+)
+;
+assert_equals
+(
+e
+.
+destination
+.
+getState
+(
+)
+.
+key
+"
+value
+"
+"
+destination
+.
+getState
+(
+)
+"
+)
+;
+assert_not_equals
+(
+e
+.
+destination
+.
+getState
+(
+)
+navState
+)
+;
 }
 )
 ;
@@ -171,19 +317,20 @@ contentWindow
 .
 appHistory
 .
-navigate
+reload
 (
 {
 info
 :
 navInfo
+state
+:
+undefined
 }
 )
-;
-i
 .
-onload
-=
+then
+(
 t
 .
 step_func_done
@@ -200,7 +347,6 @@ onnavigate_called
 ;
 assert_equals
 (
-start_url
 i
 .
 contentWindow
@@ -208,11 +354,11 @@ contentWindow
 location
 .
 href
+start_url
 )
 ;
 assert_equals
 (
-start_key
 i
 .
 contentWindow
@@ -222,11 +368,11 @@ appHistory
 current
 .
 key
+start_key
 )
 ;
 assert_not_equals
 (
-start_id
 i
 .
 contentWindow
@@ -236,6 +382,7 @@ appHistory
 current
 .
 id
+start_id
 )
 ;
 assert_equals
@@ -246,15 +393,47 @@ contentWindow
 .
 appHistory
 .
-entries
+current
+.
+getState
 (
 )
 .
-length
-1
+key
+"
+value
+"
+"
+destination
+.
+getState
+(
+)
+"
+)
+;
+assert_not_equals
+(
+i
+.
+contentWindow
+.
+appHistory
+.
+current
+.
+getState
+(
+)
+navState
 )
 ;
 }
+)
+)
+;
+}
+)
 )
 ;
 }
@@ -262,13 +441,34 @@ length
 ;
 }
 "
-navigate
+reload
 (
 )
 variant
 with
-no
-url
+info
+and
+state
+:
+undefined
+counts
+the
+same
+as
+not
+present
+(
+because
+of
+Web
+IDL
+dictionary
+semantics
+)
+so
+preserves
+the
+state
 "
 )
 ;
