Bug 1724844 [wpt PR 29961] - Fuzzy match for css/css-position/position-absolute-iframe-print-00*.sub.html, a=testonly
Automatic update from web-platform-tests
Fuzzy match for css/css-position/position-absolute-iframe-print-00*.sub.html

The test failed because of difference of some text antialias pixels
due to compositing differences.

Bug: 626703
Change-Id: I8871094306c6739d426afa2a2389862d0e07c52a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3083174
Reviewed-by: Stephen Chenney <schenneychromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhuchromium.org>
Cr-Commit-Position: refs/heads/master{#910330}

--

wpt-commits: 3b89d6bfb4e225051123679087467527e5261bf4
wpt-pr: 29961

UltraBlame original commit: cf34fe1e93e7e847a9241913650df4cf48975165

--- a/testing/web-platform/tests/css/css-position/position-absolute-iframe-print-001.sub.html
+++ b/testing/web-platform/tests/css/css-position/position-absolute-iframe-print-001.sub.html
@@ -84,6 +84,41 @@ html
 "
 >
 <
+!
+-
+-
+Allow
+some
+text
+antialias
+pixels
+to
+be
+different
+.
+-
+-
+>
+<
+meta
+name
+=
+"
+fuzzy
+"
+content
+=
+"
+0
+-
+255
+;
+0
+-
+20
+"
+>
+<
 style
 >
 body
