--- a/testing/web-platform/tests/css/css-position/position-absolute-iframe-print-002.sub.html
+++ b/testing/web-platform/tests/css/css-position/position-absolute-iframe-print-002.sub.html
@@ -84,6 +84,41 @@ html
 "
 >
 <
+!
+-
+-
+Allow
+some
+text
+antialias
+pixels
+to
+be
+different
+.
+-
+-
+>
+<
+meta
+name
+=
+"
+fuzzy
+"
+content
+=
+"
+0
+-
+255
+;
+0
+-
+20
+"
+>
+<
 style
 >
 body
